feat: API 확인 및 오류 수정